--- a/templates/create_user_form.html
+++ b/templates/create_user_form.html
@@ -3,4 +3,6 @@
 <input type="text" id="firstname" name="fname" placeholder="firstname" />
 <label for="lastname">Last Name:</label>
 <input type="text" id="lastname" name="lname" placeholder="lastname" />
+<label for="username">Username:</label>
+<input type="text" id="username" name="username" placeholder="username" />
 <button type="submit">Signup</button>
