Implemented a navbar for friends and recs page. Working viewRecommendations access.

--- a/frontend/src/Tailwind.css
+++ b/frontend/src/Tailwind.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@keyframes scroll-posters {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-50%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-scroll-posters {
+  display: flex;
+  animation: scroll-posters 30s linear infinite;
+}
